--- a/San_Pascual,_Batangas.mw
+++ b/San_Pascual,_Batangas.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na San Pascual<br>''Municipia Sancti Paschal''<br>''Ili ti San Pasqual''|
- sealfile     = |
- locatormapfile = Ph_locator_batangas san pascual.png |
- caption      = Map of [[Batangas]] showing the location of San Pascual. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Batangas]] |
- districts    = 2nd district |
- barangays    = 29 |
- class        = first class |
- mayor        = Antonio Dimayuga |
- founded      = 1932 |
- cityhood     = - |
- areakm2      = 50.70 |
- pop2000      = 57,200 |
- popden2000   = 1100 |
- coordinates  =  |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Pascual, Batangas
 | 1990 = 34629		
@@ -30,7 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''San Pascual''' ([[salitan Latino|Latino]]: ''Municipia Sancti Paschal''; [[salitan Iloko|Ilokano]]: ''Ili ti San Pasqual''), sakey first class na baley diad [[Filipinas|Pilipino]] ed [[Batangas]].
+Say '''San Pascual''' ([[salitan Iloko|Ilokano]]: ''Ili ti San Pasqual''), sakey first class na baley diad [[Filipinas|Pilipino]] ed [[Batangas]].
 
 == Listaan na barangay ==
 
@@ -69,6 +51,9 @@ Saray [[barangay]] ed San Pascual walay 29:
 * Santa Elena
 * Santo Niño
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 {{philippines-geo-stub}}
 {{batangas}}
