--- a/Talisay,_Batangas.mw
+++ b/Talisay,_Batangas.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na Talisay<br>''Commune di Talizay''|
- sealfile     =  |
- locatormapfile = Ph_locator_batangas talisay.png |
- caption      = Map of [[Batangas]] showing the location of Talisay. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Batangas]] |
- districts    = 3rd district |
- barangays    = 21 |
- class        = 4th class |
- mayor        = Zenaida Mendoza |
- founded      = [[1935]] |
- cityhood     = - |
- areakm2      = 28.20 |
- pop2000      = 39,120 |
- popden2000   = 1400 |
- coordinates  = 
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Talisay, Batangas
 | 1990 = 23153		
@@ -30,7 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Talisay''' ([[salitan Italiano|Italiano]]: ''Commune di Talizay''), sakey 3rd class na baley diad [[Filipinas|Pilipino]] ed [[Batangas]].
+Say '''Talisay''' sakey 3rd class na baley diad [[Filipinas|Pilipino]] ed [[Batangas]].
 
 == Listaan na barangay ==
 
@@ -59,6 +41,8 @@ Saray [[barangay]] na Talisay ed no twenty-one, ya agna-koriyente son 13 na bara
 *Tumaway
 
 
+== Saray reperensiya ==
+{{Reflist}}
 
 {{philippines-geo-stub}}
 {{batangas}}
