--- a/Template:Batangas.mw
+++ b/Template:Batangas.mw
@@ -34,7 +34,7 @@
 * [[Santo Tomas, Batangas|Santo Tomas]]
 * [[Taal, Batangas|Taal]]
 * [[Talisay, Batangas|Talisay]]
-* [[Taysan]]
+* [[Taysan, Batangas|Taysan]]
 * [[Tingloy, Batangas|Tingloy]]
 * [[Tuy, Batangas|Tuy]]
 |group3 = Saray siyudad
