--- a/Taysan.mw
+++ b/Taysan.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = 台山市<br>Taysan<br>''Taisan'' |
- sealfile     = |
- locatormapfile = Ph_locator_batangas taysan.png |
- caption      = Map of [[Batangas]] showing the location of Taysan. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Batangas]] |
- districts    = 4th district |
- barangays    = 20 |
- class        = 2nd class |
- mayor        = [[Victor Portugal]] |
- founded      = [[1920]] tan [[2010]] |
- cityhood     = |
- areakm2      = 93.6200 |
- pop2000      = 334540 |
- popden2000   = 3600 |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Taysan, Batangas
 | 1990 = 22508		
@@ -30,7 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Taysan''' ([[salitan Intsik|Intsik]]/[[salitan Baybayin|Baybayin]]: ''台山市''; [[salitan Português|Português]] ''Cidado Taisan''), sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Batangas]]
+Say '''Taysan''' sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Batangas]]
 
 == Listaan na barangay ==
 
@@ -60,6 +42,9 @@ Say Taysan walay 20 ya [[barangay]]:
 ==Saray too diad Taysan==
 * [[Victor Portugal|Dondon Portugal]]
 * [[Karen Mandanas]] (''[[Jessy Mendiola]]'')
+
+== Saray reperensiya ==
+{{Reflist}}
 
 {{Geographic location
 |Centre    = Taysan
