--- a/Tingloy.mw
+++ b/Tingloy.mw
@@ -1,6 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-[[image:Ph locator batangas tingloy.png|right|270px|Isla ed Tingloy]]
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tingloy, Batangas
 | 1990 = 15430		
@@ -13,11 +12,9 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Tingloy''' ([[salitan Espanol|Kastila]]: ''Tinloy''), so sakey baley diad [[filipinas|Pilipino]] ed luyag na [[Batangas]].
-[[image:batangas coast.jpg|right|thumb|300px|Aplaya ed Tingloy]]
+Say '''Tingloy''' so sakey baley diad [[filipinas|Pilipino]] ed luyag na [[Batangas]].
 
 Nengneng so [[Puerto Galera]] tan isla ed Maricaban dia [[Mabini (Batangas)|Mabini]] ed baybay!
-
 
 ==Saray baranggay==
 
@@ -38,6 +35,9 @@ Saray barangay ed Tingloy no 15:
 * San Pedro
 * Santo Tomas
 * Talahib
+
+== Saray reperensiya ==
+{{Reflist}}
 
 {{philippines-geo-stub}}
 {{Batangas}}
