--- a/Tuy.mw
+++ b/Tuy.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Tuy|
- sealfile     = |
- locatormapfile = Ph_locator_batangas tuy.png |
- caption      = Map of [[Batangas]] showing the location of Tuy. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Batangas]] |
- districts    = first district |
- barangays    = 22 |
- class        = 4th class |
- mayor        = [[Jey Cerrado]] |
- founded      = Agosto 12, [[1866]] |
- cityhood     = - |
- areakm2      = 94.650 |
- pop2000      =  |
- popden2000   =  |
- coordinates  = Kabituyan sakey lubay na too |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tuy, Batangas
 | 1990 = 30409		
@@ -64,12 +46,8 @@ Saray [[barangay]] ed Tuy no twenty two:
 * Tuyon-tuyon
 </td></tr></table>
 
-== Saray lokasiyon ==
-=== Tinda ===
-===Eskuela===
-* [[Luntal Elementary School]]
-=== Kainan ===
-* Angelica's Kainan
+== Saray reperensiya ==
+{{Reflist}}
 
 {{philippines-geo-stub}}
 {{Batangas}}
