--- a/Siyudad_na_Batangas.mw
+++ b/Siyudad_na_Batangas.mw
@@ -1,6 +1,12 @@
-[[File:Ph_locator_batangas_batangas.png|right|270px]] 							
+{{Infobox location}}						
 									
 Say '''Siyudad na Batangas''' et unaan ya klase siyudad ed luyag na [[Batangas]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 329,874 totoo. <br> 	
-Walay kabaleg tan sukat to ya 282.96 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 4232. 			
-									
+Walay kabaleg tan sukat to ya 282.96 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 4232. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Batangas}}	
+	
+[[Category:Batangas]]								
 [[Category:Saray siyudad na Filipinas]]
