--- a/Lipa.mw
+++ b/Lipa.mw
@@ -1,6 +1,12 @@
-[[File:Ph_locator_batangas_lipa.png|right|270px]] 							
-									
+{{Infobox location}}
+							
 Say '''Lipa''' et unaan ya klase siyudad ed luyag na [[Batangas]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 283,468 totoo. <br> 	
-Walay kabaleg tan sukat to ya 209.40 sq. km. Sikato et walad  kumapat ya distrito. Say zip code to et 4217. 			
-									
+Walay kabaleg tan sukat to ya 209.40 sq. km. Sikato et walad  kumapat ya distrito. Say zip code to et 4217. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Batangas}}	
+		
+[[Category:Batangas]]							
 [[Category:Saray siyudad na Filipinas]]
