--- a/Tanauan.mw
+++ b/Tanauan.mw
@@ -1,6 +1,12 @@
-[[File:Ph_locator_batangas_tanauan.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Tanauan''' et kumadwa ya klase siyudad ed luyag na [[Batangas]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 152,393 totoo. <br> 	
-Walay kabaleg tan sukat to ya 107.16 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 4232. 			
-									
+Walay kabaleg tan sukat to ya 107.16 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 4232. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Batangas}}	
+	
+[[Category:Batangas]]								
 [[Category:Saray siyudad na Filipinas]]
