--- a/Atok.mw
+++ b/Atok.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_benguet_atok.png|right|Mapa na Benguet ya nanengneng so location na Atok]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Atok, Benguet
 | 1990 = 13853		
@@ -25,6 +26,9 @@ Say Atok walay 8 ya [[barangay]].
 * Pasdong
 * Poblacion
 * Topdac
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
