--- a/Bakun.mw
+++ b/Bakun.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_benguet_bakun.png|right|Mapa na Benguet ya nanengneng so location na Bakun]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bakun, Benguet
 | 1990 = 10817		
@@ -24,6 +25,9 @@ Say Bakun walay 7 ya [[barangay]].
 * Kayapa
 * Poblacion (Central)
 * Sinacbat
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
