--- a/Bokod.mw
+++ b/Bokod.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_benguet_bokod.png|right|Mapa na Benguet ya nanengneng so location na Bokod]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bokod, Benguet
 | 1990 = 11474		
@@ -27,6 +28,9 @@ Say Bokod walay 10 ya [[barangay]].
 * Pito
 * Poblacion
 * Tikey
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
