--- a/Buguias.mw
+++ b/Buguias.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_benguet_buguias.png|right|Mapa na Benguet ya nanengneng so location na Buguias]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Buguias, Benguet
 | 1990 = 25236		
@@ -31,6 +32,9 @@ Say Buguias walay 14 ya [[barangay]].
 * Baculongan Sur
 * Lengaoan
 * Sebang
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
