--- a/Itogon.mw
+++ b/Itogon.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_benguet_itogon.png|right|Mapa na Benguet ya nanengneng so location na Itogon]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Itogon, Benguet
 | 1990 = 61773		
@@ -26,6 +27,9 @@ Say Itogon walay 9 ya [[barangay]].
 * Tuding
 * Ucab
 * Virac
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
