--- a/Kabayan.mw
+++ b/Kabayan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_benguet_kabayan.png|right|Mapa na Benguet ya nanengneng so location na Kabayan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Kabayan, Benguet
 | 1990 = 10306		
@@ -30,6 +31,9 @@ Say Kabayan walay 13 ya [[barangay]].
 * Pacso
 * Poblacion (Central)
 * Tawangan
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
