--- a/Kapangan.mw
+++ b/Kapangan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_benguet_kapangan.png|right|Mapa na Benguet ya nanengneng so location na Kapangan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Kapangan, Benguet
 | 1990 = 15537		
@@ -32,6 +33,9 @@ Say Kapangan walay 15 ya [[barangay]].
 * Pongayan
 * Sagubo
 * Taba-ao
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
