--- a/Kibungan.mw
+++ b/Kibungan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_benguet_kibungan.png|right|Mapa na Benguet ya nanengneng so location na Kibungan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Kibungan, Benguet
 | 1990 = 12753		
@@ -24,6 +25,9 @@ Say Kibungan walay 7 ya [[barangay]].
 * Poblacion
 * Sagpat
 * Tacadang
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
