--- a/La_Trinidad.mw
+++ b/La_Trinidad.mw
@@ -1,4 +1,5 @@
-[[File:Ph_locator_benguet_la trinidad.png|right|Mapa na Benguet ya nanengneng so location na La Trinidad]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> La Trinidad, Benguet
 | 1990 = 48252		
@@ -37,6 +38,9 @@ Say La Trinidad walay 16 ya [[barangay]].
 * Tawang
 * Wangal
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 == Saray nipaway ya kawing ==
 * [http://www.benguet.gov.ph/index.php?option=com_content&task=view&id=32&Itemid=193 Luyag na Benguet - La Trinidad]
