--- a/Mankayan.mw
+++ b/Mankayan.mw
@@ -1,5 +1,5 @@
-[[Image:Ph_locator_benguet_mankayan.png|right|Mapa na Benguet ya nanengneng so location na Mankayan]]
-			
+{{Infobox location}}
+		
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mankayan, Benguet
 | 1990 = 32889		
@@ -30,6 +30,9 @@ Say Mankayan walay 12 ya [[barangay]].
 * Sapid
 * Tabio
 * Taneg
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
