--- a/Sablan.mw
+++ b/Sablan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_benguet_sablan.png|right|Mapa na Benguet ya nanengneng so location na Sablan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sablan, Benguet
 | 1990 = 8440		
@@ -25,6 +26,9 @@ Say Sablan walay 8 ya [[barangay]].
 * Kamog
 * Pappa
 * Poblacion
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
