--- a/Tuba.mw
+++ b/Tuba.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_benguet_tuba.png|right|250px|Mapa na Benguet ya nanengneng so location na Tuba]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tuba, Benguet
 | 1990 = 39635		
@@ -36,6 +37,9 @@ Say Tuba walay 13 ya [[barangay]].
 | [[File:Tuba Benguet 1.JPG|none|260px]]
 | [[File:Tuba Benguet 2.JPG|none|220px]]
 |}
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
