--- a/Tublay.mw
+++ b/Tublay.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_benguet_tublay.png|right|Mapa na Benguet ya nanengneng so location na Tublay]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tublay, Benguet
 | 1990 = 11479		
@@ -25,6 +26,9 @@ Say Tublay walay 8 ya [[barangay]].
 * Caponga (Pob.)
 * Tublay Central
 * Tuel
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 *[http://www.benguet.gov.ph/index.php?option=com_content&task=view&id=28&Itemid=197 Luyag na Benguet - Tublay]
