--- a/Baguio.mw
+++ b/Baguio.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_benguet_baguio.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Baguio''' et unaan ya klase siyudad ed luyag na [[Benguet]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 318,676 totoo. <br> 	
-Walay kabaleg tan sukat to ya 57.51 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 2600. 			
+Walay kabaleg tan sukat to ya 57.51 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 2600. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Benguet}}	
 									
 [[Category:Saray siyudad na Filipinas]]
