--- a/Almeria.mw
+++ b/Almeria.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator biliran almeria.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Almeria, Biliran
 | 1990 = 12013		
@@ -29,12 +30,14 @@ Say '''Almeria''' et kumalima ya klase baley ed luyag na [[Biliran]], [[Pilipina
 * Talahid 	
 * Tamarindo 
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Biliran}}
-
-															
+														
 [[Category:Saray baley na Biliran]]
