--- a/Biliran,_Biliran.mw
+++ b/Biliran,_Biliran.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator biliran biliran.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Biliran, Biliran
 | 1990 = 11531		
@@ -27,10 +28,14 @@ Say '''Biliran''' et kumalima ya klase baley ed luyag na [[Biliran]], [[Pilipina
 * Sanggalang
 * Villa Enage (Baras)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Biliran}}															
+{{Biliran}}	
+														
 [[Category:Saray baley na Biliran]]
