--- a/Caibiran.mw
+++ b/Caibiran.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator biliran caibiran.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Caibiran, Biliran
 | 1990 = 17596		
@@ -32,10 +33,14 @@ Say '''Caibiran''' et kumalima ya klase baley ed luyag na [[Biliran]], [[Pilipin
 * Victory (Pob.)
 * Villa Vicenta (Mainit)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Biliran}}															
+{{Biliran}}		
+													
 [[Category:Saray baley na Biliran]]
