--- a/Naval.mw
+++ b/Naval.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator biliran naval.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Naval, Biliran
 | 1990 = 29811		
@@ -42,10 +43,14 @@ Say '''Naval''' et kumadwa ya klase baley ed luyag na [[Biliran]], [[Pilipinas]]
 *Padre Sergio Eamiguel
 *Sabang
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Biliran}}															
+{{Biliran}}	
+														
 [[Category:Saray baley na Biliran]]
