--- a/Dagohoy.mw
+++ b/Dagohoy.mw
@@ -1,5 +1,5 @@
-[[File:Ph locator bohol dagohoy.png|right|250px]]
-[[File:Dagohoy Bohol 1.JPG|250px|right]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Dagohoy, Bohol
 | 1990 = 10527		
@@ -32,10 +32,14 @@ Say '''Dagohoy''' et kumalima ya klase baley ed luyag na [[Bohol]], [[Pilipinas]
 * Santa Cruz
 * Villa Aurora
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bohol}}															
+{{Bohol}}	
+														
 [[Category:Saray baley na Bohol]]
