--- a/Lila.mw
+++ b/Lila.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bohol lila.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lila, Bohol
 | 1990 = 21135		
@@ -34,10 +35,14 @@ Say '''Lila''' et kumalima ya klase baley ed luyag na [[Bohol]], [[Pilipinas]]. 
 * Taug
 * Tiguis
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bohol}}															
+{{Bohol}}	
+														
 [[Category:Saray baley na Bohol]]
