--- a/Mabini,_Bohol.mw
+++ b/Mabini,_Bohol.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bohol mabini.png|right|230px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mabini, Bohol
 | 1990 = 34400		
@@ -43,10 +44,14 @@ Mabini Bohol 1.JPG
 Mabini Bohol 2.JPG
 </gallery>
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bohol}}															
+{{Bohol}}	
+														
 [[Category:Saray baley na Bohol]]
