--- a/Pilar,_Bohol.mw
+++ b/Pilar,_Bohol.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bohol pilar.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pilar, Bohol
 | 1990 = 17004		
@@ -41,10 +42,14 @@ Pilar Bohol 1.JPG
 Pilar Bohol 2.JPG
 </gallery>
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Bohol}}
+
 [[Category:Saray baley na Bohol]]
