--- a/President_Carlos_P._Garcia,_Bohol.mw
+++ b/President_Carlos_P._Garcia,_Bohol.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bohol pres. carlos p. garcia.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> President Carlos P. Garcia, Bohol
 | 1990 = 19930		
@@ -39,10 +40,14 @@ Say '''President Carlos P. Garcia''' et kumapat ya klase baley ed luyag na [[Boh
 * Butan
 * San Vicente
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bohol}}															
+{{Bohol}}	
+														
 [[Category:Saray baley na Bohol]]
