--- a/San_Miguel,_Bohol.mw
+++ b/San_Miguel,_Bohol.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bohol san miguel.png|right|250px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Miguel, Bohol
 | 1990 = 16775		
@@ -38,10 +39,14 @@ San Miguel Bohol 1.jpg
 San Miguel Bohol 2.jpg
 </gallery>
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bohol}}													
+{{Bohol}}	
+												
 [[Category:Saray baley na Bohol]]
