--- a/Sevilla.mw
+++ b/Sevilla.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bohol sevilla.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sevilla, Bohol
 | 1990 = 9165		
@@ -29,10 +30,14 @@ Say '''Sevilla''' et kumalima ya klase baley ed luyag na [[Bohol]], [[Pilipinas]
 * Magsaysay
 * Poblacion
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bohol}}												
+{{Bohol}}	
+											
 [[Category:Saray baley na Bohol]]
