--- a/Sierra_Bullones.mw
+++ b/Sierra_Bullones.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bohol sierra bullones.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sierra Bullones, Bohol
 | 1990 = 21101		
@@ -38,10 +39,14 @@ Say '''Sierra Bullones''' et kumatlo ya klase baley ed luyag na [[Bohol]], [[Pil
 * Santa Cruz
 * Villa Garcia
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bohol}}											
+{{Bohol}}	
+										
 [[Category:Saray baley na Bohol]]
