--- a/Tagbilaran.mw
+++ b/Tagbilaran.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_bohol_tagbilaran.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Tagbilaran''' et kumatlo ya klase siyudad ed luyag na [[Bohol]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 96,792 totoo. <br> 	
-Walay kabaleg tan sukat to ya 36.50 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 6300. 			
+Walay kabaleg tan sukat to ya 36.50 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 6300. 
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Bohol}}		
 									
 [[Category:Saray siyudad na Filipinas]]
