--- a/Cabanglasan.mw
+++ b/Cabanglasan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bukidnon cabanglasan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Cabanglasan, Bukidnon
 | 1990 = 26351		
@@ -30,6 +31,9 @@ Say '''Cabanglasan''' et kumatlo ya klase baley ed luyag na [[Bukidnon]], [[Pili
 * Mandahikan
 * Mauswagon
 * Jasaan
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
