--- a/Damulog,_Bukidnon.mw
+++ b/Damulog,_Bukidnon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bukidnon damulog.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Damulog, Bukidnon
 | 1990 = 13595		
@@ -33,10 +34,14 @@ Say '''Damulog''' et kumapat ya klase baley ed luyag na [[Bukidnon]], [[Pilipina
 * Sampagar
 * San Isidro
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bukidnon}}															
+{{Bukidnon}}	
+														
 [[Category:Saray baley na Bukidnon]]
