--- a/Dangcagan.mw
+++ b/Dangcagan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bukidnon dangcagan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Dangcagan, Bukidnon
 | 1990 = 14823		
@@ -30,10 +31,14 @@ Say '''Dangcagan''' et kumatlo ya klase baley ed luyag na [[Bukidnon]], [[Pilipi
 * Sagbayan
 * San Vicente
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bukidnon}}														
+{{Bukidnon}}	
+													
 [[Category:Saray baley na Bukidnon]]
