--- a/Impasug-ong.mw
+++ b/Impasug-ong.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bukidnon impasug-ong.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Impasug-ong, Bukidnon
 | 1990 = 22629		
@@ -13,7 +14,6 @@
 |}}
 Say '''Impasug-ong''' et unaan ya klase baley ed luyag na [[Bukidnon]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 43,587 totoo. Walay kabaleg tan sukat to ya 1051.17 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8702.	
 		
-
 ==Saray barangay==
 * Bontongon
 * Bulonay
@@ -29,10 +29,14 @@ Say '''Impasug-ong''' et unaan ya klase baley ed luyag na [[Bukidnon]], [[Pilipi
 * Poblacion
 * Sayawan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bukidnon}}													
+{{Bukidnon}}		
+											
 [[Category:Saray baley na Bukidnon]]
