--- a/Kalilangan.mw
+++ b/Kalilangan.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator bukidnon kalilangan.png|right|270px]]
+{{Infobox location}}
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Kalilangan, Bukidnon
@@ -14,7 +14,6 @@
 |}}
 		
 Say '''Kalilangan''' et kumadwa ya klase baley ed luyag na [[Bukidnon]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 39,847 totoo. Walay kabaleg tan sukat to ya 251.43 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 8718.	
-
 
 ==Saray barangay==
 * Bangbang
@@ -32,10 +31,14 @@ Say '''Kalilangan''' et kumadwa ya klase baley ed luyag na [[Bukidnon]], [[Pilip
 * San Vicente Ferrer
 * West Poblacion
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bukidnon}}															
+{{Bukidnon}}	
+														
 [[Category:Saray baley na Bukidnon]]
