--- a/Kibawe.mw
+++ b/Kibawe.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bukidnon kibawe.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Kibawe, Bukidnon
 | 1990 = 28608		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Kibawe''' et kumadwa ya klase baley ed luyag na [[Bukidnon]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 35,767 totoo. Walay kabaleg tan sukat to ya 304.13 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 8720.	
-
 
 ==Saray barangay==
 * Balintawak
@@ -39,10 +39,14 @@ Say '''Kibawe''' et kumadwa ya klase baley ed luyag na [[Bukidnon]], [[Pilipinas
 * Bukang Liwayway
 * Palma
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bukidnon}}															
+{{Bukidnon}}	
+														
 [[Category:Saray baley na Bukidnon]]
