--- a/Kitaotao.mw
+++ b/Kitaotao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bukidnon kitaotao.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Kitaotao, Bukidnon
 | 1990 = 34472		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Kitaotao''' et unaan ya klase baley ed luyag na [[Bukidnon]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 49,488 totoo. Walay kabaleg tan sukat to ya 788.78 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 8716.	
-
 
 ==Saray barangay==
 * Balangigay
@@ -51,10 +51,14 @@ Say '''Kitaotao''' et unaan ya klase baley ed luyag na [[Bukidnon]], [[Pilipinas
 * East Dalurong
 * West Dalurong
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bukidnon}}															
+{{Bukidnon}}	
+														
 [[Category:Saray baley na Bukidnon]]
