--- a/Lantapan.mw
+++ b/Lantapan.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator bukidnon lantapan.png|right|270px]]	
+{{Infobox location}}
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lantapan, Bukidnon
@@ -14,7 +14,6 @@
 |}}
 Say '''Lantapan''' et unaan ya klase baley ed luyag na [[Bukidnon]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 55,934 totoo. Walay kabaleg tan sukat to ya 328.35 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8722.	
 	
-
 ==Saray barangay==
 * Alanib
 * Baclayon
@@ -31,10 +30,14 @@ Say '''Lantapan''' et unaan ya klase baley ed luyag na [[Bukidnon]], [[Pilipinas
 * Songco
 * Victory
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bukidnon}}														
+{{Bukidnon}}	
+													
 [[Category:Saray baley na Bukidnon]]
