--- a/Libona.mw
+++ b/Libona.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bukidnon libona.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Libona, Bukidnon
 | 1990 = 29652		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Libona''' et unaan ya klase baley ed luyag na [[Bukidnon]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 39,393 totoo. Walay kabaleg tan sukat to ya 374.37 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8706.	
-
 
 ==Saray barangay==
 * Capihan
@@ -30,10 +30,14 @@ Say '''Libona''' et unaan ya klase baley ed luyag na [[Bukidnon]], [[Pilipinas]]
 * Santa Fe
 * Sil-ipon
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bukidnon}}															
+{{Bukidnon}}	
+														
 [[Category:Saray baley na Bukidnon]]
