--- a/Malitbog,_Bukidnon.mw
+++ b/Malitbog,_Bukidnon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bukidnon malitbog.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Malitbog, Bukidnon
 | 1990 = 14934		
@@ -13,7 +14,6 @@
 |}}
 Say '''Malitbog''' et kumadwa ya klase baley ed luyag na [[Bukidnon]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 22,880 totoo. Walay kabaleg tan sukat to ya 581.85 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8704.	
 
-
 ==Saray barangay==
 * Kalingking
 * Kiabo
@@ -27,10 +27,14 @@ Say '''Malitbog''' et kumadwa ya klase baley ed luyag na [[Bukidnon]], [[Pilipin
 * Silo-o
 * Sumalsag
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bukidnon}}															
+{{Bukidnon}}	
+														
 [[Category:Saray baley na Bukidnon]]
