--- a/Maramag.mw
+++ b/Maramag.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bukidnon maramag.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Maramag, Bukidnon
 | 1990 = 55394		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Maramag''' et unaan ya klase baley ed luyag na [[Bukidnon]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 90,901 totoo. Walay kabaleg tan sukat to ya 447.26 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 8714.	
-
 
 ==Saray barangay==
 * Anahawon
@@ -36,10 +36,14 @@ Say '''Maramag''' et unaan ya klase baley ed luyag na [[Bukidnon]], [[Pilipinas]
 * Bagongsilang
 * Kiharong
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bukidnon}}															
+{{Bukidnon}}	
+														
 [[Category:Saray baley na Bukidnon]]
