--- a/Talakag.mw
+++ b/Talakag.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bukidnon talakag.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Talakag, Bukidnon
 | 1990 = 35379		
@@ -13,7 +14,6 @@
 |}}
 	
 Say '''Talakag''' et unaan ya klase baley ed luyag na [[Bukidnon]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 67,123 totoo. Walay kabaleg tan sukat to ya 786.4 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8708.	
-
 
 ==Saray barangay==
 * Basak
@@ -46,10 +46,14 @@ Say '''Talakag''' et unaan ya klase baley ed luyag na [[Bukidnon]], [[Pilipinas]
 * Tagbak
 * Tikalaan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bukidnon}}															
+{{Bukidnon}}	
+														
 [[Category:Saray baley na Bukidnon]]
