--- a/Malaybalay.mw
+++ b/Malaybalay.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_bukidnon_malaybalay.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Malaybalay''' et unaan ya klase siyudad ed luyag na [[Bukidnon]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 153,085 totoo. <br> 	
-Walay kabaleg tan sukat to ya 969.19 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 8700. 			
+Walay kabaleg tan sukat to ya 969.19 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 8700. 
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Bukidnon}}		
 									
 [[Category:Saray siyudad na Filipinas]]
