--- a/Valencia,_Bukidnon.mw
+++ b/Valencia,_Bukidnon.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_bukidnon_valencia.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Valencia, Bukidnon''' et kumadwa ya klase siyudad ed luyag na [[Bukidnon]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 181,556 totoo. <br> 	
-Walay kabaleg tan sukat to ya 587.29 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 8709. 			
+Walay kabaleg tan sukat to ya 587.29 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 8709.
+
+== Saray reperensiya ==
+{{Reflist}} 
+
+{{Bukidnon}}			
 									
 [[Category:Saray siyudad na Filipinas]]
