--- a/Angat.mw
+++ b/Angat.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bulacan angat.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Angat, Bulacan
 | 1990 = 34494		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Angat''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 55,332 totoo. Walay kabaleg tan sukat to ya 74 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 3012.	
-
 
 ==Saray barangay==
 * Banaban
@@ -32,10 +32,14 @@ Say '''Angat''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]. 
 * Sulucan
 * Taboc
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bulacan}}															
+{{Bulacan}}	
+														
 [[Category:Saray baley na Bulacan]]
