--- a/Doña_Remedios_Trinidad.mw
+++ b/Doña_Remedios_Trinidad.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bulacan dona remedios trinidad.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Doña Remedios Trinidad, Bulacan
 | 1990 = 8614		
@@ -13,7 +14,6 @@
 |}}
 Say '''Doña Remedios Trinidad''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 19,878 totoo. Walay kabaleg tan sukat to ya 932.96 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 3009.	
 	
-
 ==Saray barangay==
 * Bayabas
 * Kabayunan
@@ -24,10 +24,14 @@ Say '''Doña Remedios Trinidad''' et unaan ya klase baley ed luyag na [[Bulacan]
 * Talbak
 * Sapang Bulak
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bulacan}}														
+{{Bulacan}}	
+													
 [[Category:Saray baley na Bulacan]]
