--- a/Obando,_Bulacan.mw
+++ b/Obando,_Bulacan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bulacan obando.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Obando, Bulacan
 | 1990 = 46346		
@@ -13,7 +14,6 @@
 |}}
 Say '''Obando''' et kumadwa ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 58,009 totoo. Walay kabaleg tan sukat to ya 52.1 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 3021.	
 	
-
 ==Saray barangay==
 * Binuangan
 * Catanghalan
@@ -27,10 +27,14 @@ Say '''Obando''' et kumadwa ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]
 * San Pascual
 * Tawiran
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bulacan}}														
+{{Bulacan}}	
+													
 [[Category:Saray baley na Bulacan]]
