--- a/Paombong.mw
+++ b/Paombong.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bulacan paombong.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Paombong, Bulacan
 | 1990 = 32052		
@@ -13,7 +14,6 @@
 |}}
 Say '''Paombong''' et kumatlo ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 50,940 totoo. Walay kabaleg tan sukat to ya 46.34 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 3001.	
 	
-
 ==Saray barangay==
 * Binakod
 * Kapitangan
@@ -30,10 +30,14 @@ Say '''Paombong''' et kumatlo ya klase baley ed luyag na [[Bulacan]], [[Pilipina
 * Santo Niño
 * Santo Rosario
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bulacan}}														
+{{Bulacan}}	
+													
 [[Category:Saray baley na Bulacan]]
