--- a/Pulilan.mw
+++ b/Pulilan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bulacan pulilan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pulilan, Bulacan
 | 1990 = 48199		
@@ -13,7 +14,6 @@
 |}}
 Say '''Pulilan''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 85,844 totoo. Walay kabaleg tan sukat to ya 39.89 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 3005.	
 		
-
 ==Saray barangay==
 * Balatong A
 * Balatong B
@@ -35,10 +35,14 @@ Say '''Pulilan''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]
 * Tibag
 * Tinejero
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bulacan}}													
+{{Bulacan}}		
+											
 [[Category:Saray baley na Bulacan]]
