--- a/Template:Cagayan.mw
+++ b/Template:Cagayan.mw
@@ -14,7 +14,7 @@
 * [[Ballesteros, Cagayan|Ballesteros]]
 * [[Buguey, Cagayan|Buguey]]
 * [[Calayan, Cagayan|Calayan]]
-* [[Camalaniugan, Cagayan|Camalaniugan]]
+* [[Camalaniugan]]
 * [[Claveria, Cagayan|Claveria]]
 * [[Enrile, Cagayan|Enrile]]
 * [[Gattaran, Cagayan|Gattaran]]
