--- a/Template:Camarines_Norte.mw
+++ b/Template:Camarines_Norte.mw
@@ -5,7 +5,7 @@
 |listclass = hlist
 |group1 = Saray baley
 |list1 = 
-* [[Basud, Camarines Norte|Basud]]
+* [[Basud]]
 * [[Capalonga, Camarines Norte|Capalonga]]
 * [[Daet, Camarines Norte|Daet]]
 * [[Jose Panganiban, Camarines Norte|Jose Panganiban]]
