--- a/Capalonga.mw
+++ b/Capalonga.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines norte capalonga.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Capalonga, Camarines Norte
 | 1990 = 23557		
@@ -13,7 +14,6 @@
 |}}
 Say '''Capalonga''' et kumatlo ya klase baley ed luyag na [[Camarines Norte]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 32,215 totoo. Walay kabaleg tan sukat to ya 290 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 4607.	
 		
-
 ==Saray barangay==
 * Alayao
 * Binawangan
@@ -38,10 +38,14 @@ Say '''Capalonga''' et kumatlo ya klase baley ed luyag na [[Camarines Norte]], [
 * Villa Aurora
 * Villa Belen
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Norte}}												
+{{Camarines Norte}}	
+											
 [[Category:Saray baley na Camarines Norte]]
