--- a/Template:Camarines_Norte.mw
+++ b/Template:Camarines_Norte.mw
@@ -7,7 +7,7 @@
 |list1 = 
 * [[Basud]]
 * [[Capalonga, Camarines Norte|Capalonga]]
-* [[Daet, Camarines Norte|Daet]]
+* [[Daet]]
 * [[Jose Panganiban, Camarines Norte|Jose Panganiban]]
 * [[Labo, Camarines Norte|Labo]]
 * [[Mercedes, Camarines Norte|Mercedes]]
