--- a/Template:Camarines_Norte.mw
+++ b/Template:Camarines_Norte.mw
@@ -16,7 +16,7 @@
 * [[San Vicente, Camarines Norte|San Vicente]]
 * [[Santa Elena, Camarines Norte|Santa Elena]]
 * [[Talisay, Camarines Norte|Talisay]]
-* [[Vinzons, Camarines Norte|Vinzons]]
+* [[Vinzons]]
 }}<noinclude>
 [[Category:Saray baley na Camarines Norte| ]]
 </noinclude>
