--- a/Template:Cavite.mw
+++ b/Template:Cavite.mw
@@ -9,7 +9,7 @@
 * [[Amadeo, Cavite|Amadeo]]
 * [[Carmona, Cavite|Carmona]]
 * [[General Emilio Aguinaldo, Cavite|General Emilio Aguinaldo]]
-* [[General Mariano Alvarez, Cavite|General Mariano Alvarez]]
+* [[General Mariano Alvarez]]
 * [[Indang, Cavite|Indang]]
 * [[Kawit, Cavite|Kawit]]
 * [[Magallanes, Cavite|Magallanes]]
