/* Saray Gawing ed Labas */ +cat

--- a/Asingan.mw
+++ b/Asingan.mw
@@ -53,5 +53,4 @@ Say Asingan walay 21 ya [[barangay]].
 {{Pangasinan}}
 {{Luzon lateral}}
 
-
-[[Category:Baley ya Pangasinan]]
+[[Category:Saray baley na Pangasinan]]
