/* Saray Gawing ed Labas */ +cat

--- a/Binmaley.mw
+++ b/Binmaley.mw
@@ -91,4 +91,4 @@ File:Binmaley567jf.JPG|Ilog ng Manat & Tulay ng Gumapos
 
 {{Pangasinan}}
 
-[[Category:Baley ya Pangasinan]]
+[[Category:Saray baley na Pangasinan]]
