/* Saray Gawing ed Labas */ +cat

--- a/Manaoag.mw
+++ b/Manaoag.mw
@@ -60,4 +60,4 @@ Say Manaoag walay 26 ya [[barangay]].
 
 {{Pangasinan}}
 
-[[Category:Baley ya Pangasinan]]
+[[Category:Saray baley na Pangasinan]]
