/* Saray Gawing ed Labas */ +cat

--- a/Lingayen.mw
+++ b/Lingayen.mw
@@ -90,4 +90,4 @@ Say Siyudad na Lingayen et walay 32 ya [[barangay]].
 
 {{Pangasinan}}
 
-[[Category:Siyudad na Pangasinan]]
+[[Category:Saray baley na Pangasinan]]
