/* Ikatlong Republika */ Manuel A. Rojas-->Manuel Roxas

--- a/Saray_pangulo_na_Filipinas.mw
+++ b/Saray_pangulo_na_Filipinas.mw
@@ -22,7 +22,7 @@ Ragay walay 15 ya termino-an ya pangulo diad Pilipino.
 * [[Jose P. Laurel]], [[1943]]-[[1945]]
 
 === Ikatlong Republika ===
-* [[Manuel A. Rojas]], [[1946]]-[[1948]] (inateyan)
+* [[Manuel Roxas]], [[1946]]-[[1948]] (inateyan)
 * [[Elpidio Quirino]], [[1948]]-[[1949]] (nag-termino ed kalpasen na inanateyan ken Rojas); [[1949]]-[[1953]]
 * [[Ramón Magsaysay]], [[1953]]-[[1957]] (inateyan)
 * [[Carlos P. García]], [[1957]] (nag-termino ed kalpasen na inanateyan ken Magsaysay); [[1957]]-[[1961]]
