--- a/Bato,_Camarines_Sur.mw
+++ b/Bato,_Camarines_Sur.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur bato.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bato, Camarines Sur
 | 1990 = 35294		
@@ -13,7 +14,6 @@
 |}}
 Say '''Bato''' et kumatlo ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 52,137 totoo. Walay kabaleg tan sukat to ya 107.12 sq. km. Sikato et walad kumalima ya distrito. Say zip code to et 4435.	
 		
-
 ==Saray barangay==
 * Agos
 * Bacolod
@@ -49,10 +49,14 @@ Say '''Bato''' et kumatlo ya klase baley ed luyag na [[Camarines Sur]], [[Pilipi
 * Tagpolo
 * Tres Reyes (Poblacion)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}													
+{{Camarines Sur}}	
+												
 [[Category:Saray baley na Camarines Sur]]
