--- a/Canaman.mw
+++ b/Canaman.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur canaman.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Canaman, Camarines Sur
 | 1990 = 20298		
@@ -13,7 +14,6 @@
 |}}
 Say '''Canaman''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 34,210 totoo. Walay kabaleg tan sukat to ya 43.27 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 4402.	
 		
-
 ==Saray barangay==
 * Baras (Poblacion)
 * Del Rosario
@@ -40,10 +40,14 @@ Say '''Canaman''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [[Pil
 * Talidtid
 * Tibgao (Poblacion)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}													
+{{Camarines Sur}}	
+												
 [[Category:Saray baley na Camarines Sur]]
